@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-04-20T00:52:27Z",
+  "timestamp" : "2024-04-20T08:12:56Z",
   "count_outdated" : 198778,
   "uniques_outdated" : 1999,
-  "count" : 200748,
-  "uniques" : 2020,
+  "count" : 200860,
+  "uniques" : 2021,
   "clones" : [
     {
       "timestamp": "2024-04-06T00:00:00Z",
-      "count": 50,
-      "count_minmax": [ 50, 51 ],
-      "count_decinc": [ 1, 51 ],
+      "count": 32,
+      "count_minmax": [ 32, 51 ],
+      "count_decinc": [ 19, 51 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 295,
       "count_minmax": [ 110, 295 ],
       "count_decinc": [ 0, 295 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-20T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
