@@ -1,10 +1,10 @@
 {
-  "count": 1969,
+  "count": 2063,
   "uniques": 3,
   "clones": [
     {
       "timestamp": "2024-04-06T00:00:00Z",
-      "count": 50,
+      "count": 32,
       "uniques": 1
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2024-04-19T00:00:00Z",
       "count": 295,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-04-20T00:00:00Z",
+      "count": 112,
       "uniques": 1
     }
   ]
